@@ -245,37 +245,19 @@ cmdline_parse (int key, char *arg, struct argp_state *state)
       break;
     case GROUPS_KEY:            /* legacy */
     case SENSOR_TYPES_KEY:
-      tok = strtok (arg, " ,");
-      while (tok && cmd_args->sensor_types_length < MAX_SENSOR_TYPES)
-        {
-          if (!strcasecmp (tok, SENSOR_PARSE_ALL_STRING))
-            {
-              cmd_args->sensor_types_length = 0;
-              break;
-            }
-          strncpy (cmd_args->sensor_types[cmd_args->sensor_types_length],
-                   tok,
-                   MAX_SENSOR_TYPES_STRING_LENGTH);
-          cmd_args->sensor_types_length++;
-          tok = strtok (NULL, " ,");
-        }
+      if (parse_sensor_types (SENSOR_PARSE_ALL_STRING,
+			      cmd_args->sensor_types,
+			      &(cmd_args->sensor_types_length),
+			      arg) < 0)
+	exit (EXIT_FAILURE);
       break;
     case EXCLUDE_GROUPS_KEY:    /* legacy */
     case EXCLUDE_SENSOR_TYPES_KEY:
-      tok = strtok (arg, " ,");
-      while (tok && cmd_args->exclude_sensor_types_length < MAX_SENSOR_TYPES)
-        {
-          if (!strcasecmp (tok, SENSOR_PARSE_NONE_STRING))
-            {
-              cmd_args->exclude_sensor_types_length = 0;
-              break;
-            }
-          strncpy (cmd_args->exclude_sensor_types[cmd_args->exclude_sensor_types_length],
-                   tok,
-                   MAX_SENSOR_TYPES_STRING_LENGTH);
-          cmd_args->exclude_sensor_types_length++;
-          tok = strtok (NULL, " ,");
-        }
+      if (parse_sensor_types (SENSOR_PARSE_NONE_STRING,
+			      cmd_args->exclude_sensor_types,
+			      &(cmd_args->exclude_sensor_types_length),
+			      arg) < 0)
+	exit (EXIT_FAILURE);
       break;
     case LIST_GROUPS_KEY:       /* legacy */
     case LIST_SENSOR_TYPES_KEY:
